First round of updates, issues with arrows aligning

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #333;
   font-family: sans-serif;
@@ -5,17 +9,64 @@ body {
 }
 
 .container {
-  margin: 0 auto;
-  width: 420px;
+  margin: 10px auto;
+  width: 70%;
+
 }
 
 nav {
   margin: 0 auto;
-  padding: 10px 0 15px 15px;
+  padding: 15px 0px 10px 15px;
   position: fixed;
-  width: 420px;
+  width: 70%;
+  background-color: black;
 }
 
 .restaurant-list {
-  padding-top: 50px;
+  padding-top: 45px;
+  padding-left: 0px;
+  padding-bottom: 10px;
+  padding-right: 0px;
+  width: 100%;
+  background-color: #dad9db;
+}
+
+.location {
+
+}
+
+.location:hover {
+  background-color: #696969;
+}
+
+.content {
+border-bottom: 1px solid black;
+padding-top: 10px;
+padding-bottom: 10px;
+display: block;
+}
+
+.arrow-left {
+  float:left;
+}
+
+.arrow {
+  float:right;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+h1 {
+  font-size: 1.5em;
+  font-weight:bold;
+  color: black;
+  padding-bottom: 5px;
+  padding-left: 10px;
+}
+
+h3 {
+  font-size: 1.3em;
+  color: black;
+  padding-left: 10px
+
 }
